# stylizer

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: analyzer.py  config.py  db.py  main.py  model_select.py  models.py  schemas.py  translator.py
apps/api/data/: app.db
apps/api/scripts/: verify_local_dev.sh
apps/api/tests/: test_main.py  test_model_select.py  test_schemas.py  test_translator.py
apps/web/: Dockerfile  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.test.ts  App.tsx  index.css  lib.ts  types.ts
apps/web/src/components/: Layout.tsx  StylePackCard.tsx
apps/web/src/pages/: HistoryPage.tsx  StylePacksPage.tsx  TranslatePage.tsx
shared/: README.md  style-pack.example.json  style-pack.schema.json  style_pack.schema.json  style_pack.ts
